# mlb-stats

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sampledata  test_local.py
src/: __init__.py  alerts.py  config.py  game_monitor.py  lambda_handler.py  play_by_play.py  state.py
terraform/: .gitignore  README.md  build_lambda_package.py  cloudwatch.tf  deploy.ps1  deploy.sh  dynamodb.tf  eventbridge.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  quickstart.bat  quickstart.sh  terraform.tfvars.example  tfplan  variables.tf
tests/: __init__.py  conftest.py  test_game_monitor.py  test_play_by_play.py
